Bug 298467 - After leaving the terminal, I cannot select items with the keyboard (because Dolphin's view does not get the keyboard focus)
Summary: After leaving the terminal, I cannot select items with the keyboard (because ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: terminal (other bugs)
Version First Reported In: 2.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: usability
: 304851 390468 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-20 05:21 UTC by Arne Babenhauserheide
Modified: 2019-08-11 11:18 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch (2.14 KB, patch)
2017-11-28 22:46 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arne Babenhauserheide 2012-04-20 05:21:59 UTC
Reproduce: 

* Enter a folder
* press F4 
* Press F4 again
* press a keye to select a folder.

This breaks my keyboard-only using mode.

I think a solution would be to have the folders pane selected by default when closing the termanal.

Reproducible: Always
Comment 1 Arne Babenhauserheide 2012-04-20 05:22:35 UTC
(pressing TAB a few times after leaving the terminal is a workaround)
Comment 2 Frank Reininghaus 2012-08-09 13:02:40 UTC
*** Bug 304851 has been marked as a duplicate of this bug. ***
Comment 3 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:21:28 UTC
Resetting assignee to default as per bug #305719
Comment 4 Emmanuel Pescosta 2014-02-27 14:13:06 UTC
Review-Request: https://git.reviewboard.kde.org/r/116118/
Comment 5 Nate Graham 2017-11-28 22:41:15 UTC
What happened to that review? Can we revive it on Phabricator and get it integrated?
Comment 6 Nate Graham 2017-11-28 22:46:42 UTC
Created attachment 109103 [details]
Patch

Attaching the patch here in case Reviewboard is shut down before we can do something with it.
Comment 7 Adrián Chaves (Gallaecio) 2018-01-17 21:18:43 UTC
Review-Request: https://phabricator.kde.org/D9955
Comment 8 Nate Graham 2018-01-18 17:54:25 UTC
author	Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>	2018-01-18 17:49:54 (GMT)
committer	Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>	2018-01-18 17:51:27 (GMT)
commit	4e40fe810d324e69eeb824e40011e509e6676aaf (patch)
tree	272da958e8b7e2774b72aab206cc0bd67ef6d119
parent	1a6b3c0a2baba955259d6083c0a3f25dfb44a682 (diff)
Set the focus to the active view, after leaving the terminal panelHEADmaster
Summary:
BUG: 298467

Set the focus to the active view, after leaving the terminal panel.

This is a fork of the patch at https://git.reviewboard.kde.org/r/116118/ by @emmanuelp which should fix the issue with the original patch reported by Frank Reininghaus.

Test Plan: Works for me.

Reviewers: #dolphin, emmanuelp, ngraham

Reviewed By: #dolphin, ngraham

Subscribers: ngraham, emmanuelp

Differential Revision: https://phabricator.kde.org/D9955
Comment 9 Nate Graham 2018-02-14 22:34:07 UTC
*** Bug 390468 has been marked as a duplicate of this bug. ***
Comment 10 Elvis Angelaccio 2019-07-14 21:10:01 UTC
Reopening because this issue got reintroduced.
Comment 11 Elvis Angelaccio 2019-07-14 21:10:10 UTC
*** Bug 407979 has been marked as a duplicate of this bug. ***
Comment 12 Elvis Angelaccio 2019-08-11 11:18:38 UTC
(In reply to Elvis Angelaccio from comment #10)
> Reopening because this issue got reintroduced.

Actually #407979 is not exactly the same issue, as in that case we exit the terminal process and the terminal panel gets closed automatically. I'll reopen it and close this one.