Set the focus to the active view, after leaving the terminal panel

Summary:
BUG: 298467

Set the focus to the active view, after leaving the terminal panel.

This is a fork of the patch at https://git.reviewboard.kde.org/r/116118/ by @emmanuelp which should fix the issue with the original patch reported by Frank Reininghaus.

Test Plan: Works for me.

Reviewers: #dolphin, emmanuelp, ngraham

Reviewed By: #dolphin, ngraham

Subscribers: ngraham, emmanuelp

Differential Revision: https://phabricator.kde.org/D9955